Fixed the count for pagination on the Atlas Search lookup